github linkimi ekledim

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Benim adim Fatih ben BURSA'LIYIM ama annem ise KASTAMONU'LU.Benim bir gunum soyl
 <h3>Mehmet Davut</h3>
 <p>iste bu benin dayim o bir YAZILIM GELISTIRICISI iste onun sitesinin bir ornegi
 <iframe src="https://www.mehmetdavut.com/" width="800px" height="600px"></iframe>
-
+<a href="https://github.com/fatihyardimci">Github</a>
 
 
 
