--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>ILK SITEM !</h1>
-
+<background>grey<background/>
 <img src="https://scontent-ams3-1.xx.fbcdn.net/v/t1.0-9/20431229_1915628855357503_917268974301748263_n.jpg?oh=e475cc62a0b0748810ab24f381099115&oe=5A947B7D" alt="ISTE BEN"
 width="200px" height="200px" />
 <h1>HAYATIM</h1>
