--- a/index.html
+++ b/index.html
@@ -21,51 +21,10 @@ Benim adim Fatih ben BURSA'LIYIM ama annem ise KASTAMONU'LU.Benim bir gunum soyl
 <p>
 <a href="https://github.com/fatihyardimci">Github</a>
 </p>
-/* Header */
-.large-header {
-	position: relative;
-	width: 100%;
-  height: 100px;
-	background: #fff;
-	overflow: hidden;
-	background-size: cover;
-	background-position: center center;
-	z-index: 1;
-}
-
-#large-header {
-	background: #333;
-  height: 100px;
-}
-
-.main-title {
-	position: absolute;
-	margin: 0;
-	padding: 0;
-	color: #f9f1e9;
-	text-align: center;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate3d(-50%,-50%,0);
-	transform: translate3d(-50%,-50%,0);
-}
-
-.demo-1 .main-title {
-	text-transform: uppercase;
-	font-size: 4.2em;
-	letter-spacing: 0.1em;
-}
-
-.main-title .thin {
-	font-weight: 200;
-}
-
-@media only screen and (max-width : 768px) {
-	.demo-1 .main-title {
-		font-size: 3em;
-    
-	}
-}
+<div id="large-header" class="large-header">
+  <canvas id="demo-canvas"></canvas>
+    <h1 class="main-title">PicoBoero <br /><span class="thin">Graphic Designer</span></h1>
+</div>
 
 
 
