Bazı CSS örnekleri yerleştirildi

--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <head>
 	<title>FaTiH</title>
 	<meta charset="utf-8">
+	<style media="screen">
+		html, body { padding: 0; margin: 0; }
+
+		body {
+			background-color: #dedede;
+			font-family: Arial, sans-serif;
+			font-size: 86%;
+			border: 15px solid #333;
+			padding: 20px;
+		}
+
+		iframe { width: 100%; overflow: hidden; }
+	</style>
 </head>
 <body>
 	<h1>ILK SITEM !</h1>
@@ -15,7 +28,7 @@
 	<a href="https://www.instagram.com/_fatihyardimci_/">Instagram Adresim</a><br>
 	<h3>Mehmet Davut</h3>
 	<p>iste bu benin dayim o bir YAZILIM GELISTIRICISI iste onun sitesinin bir ornegi</p>
-		<iframe src="https://www.mehmetdavut.com/" width="800px" height="600px"></iframe>
+		<iframe frameborder="0" src="https://www.mehmetdavut.com/" width="800px" height="700px"></iframe>
 		<p>
 			<a href="https://github.com/fatihyardimci">Github</a>
 		</p>
