--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		html, body { padding: 0; margin: 0; }
 
 		body {
-			background-color: #fff;
+			background-color: #dedede;
 			font-family: Arial, sans-serif;
 			font-size: 86%;
 			border: 15px solid #333;
