--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>FaTiH</title>
+	<meta charset="utf-8">
+	<title>FATiH</title>
 	<meta charset="utf-8">
 	<style media="screen">
 		html, body { padding: 0; margin: 0; }
@@ -19,15 +20,21 @@
 	</style>
 </head>
 <body>
-	<h1>ILK SITEM !</h1>
+
+	<h1>FATiH YARDIMCI</h1>
 	<img src="https://scontent-ams3-1.xx.fbcdn.net/v/t1.0-9/20431229_1915628855357503_917268974301748263_n.jpg?oh=e475cc62a0b0748810ab24f381099115&oe=5A947B7D" alt="ISTE BEN" width="200px" height="200px" />
 	<h1>HAYATIM</h1>
-	Iste ben<h3>Fatih YARDIMCI</h3>
+
+	<h3>Fatih YARDIMCI</h3>
 	Benim adim Fatih ben BURSA'LIYIM ama annem ise KASTAMONU'LU.Benim bir gunum soyle geciyor,PAZARTESI'DEN baslarim CUMA'YA kadar okula giderim ama spor yapmayida unutmam ben CARSAMBA ve CUMARTESI  TAEKWONDO'YA giderim,suan mavi kusagim ama kusak atliycam.PERSEMBE,CUMARTESI,PAZAR gunleri de dershaneye giderim offfff , hic bos gunum yok :D <br/>
+
 	<a href="https://www.facebook.com/fatihyardimci2005">Facebook Adresim</a><br/>
 	<a href="https://www.instagram.com/_fatihyardimci_/">Instagram Adresim</a><br>
+
 	<h3>Mehmet Davut</h3>
+
 	<p>iste bu benin dayim o bir YAZILIM GELISTIRICISI iste onun sitesinin bir ornegi</p>
+
 		<iframe frameborder="0" src="https://www.mehmetdavut.com/" width="800px" height="700px"></iframe>
 		<p>
 			<a href="https://github.com/fatihyardimci">Github</a>
