--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>FATiH</title>
+	<title>FATİH</title>
 	<meta charset="utf-8">
 	<style media="screen">
 		html, body { padding: 0; margin: 0; }
@@ -26,14 +26,14 @@
 	<h1>HAYATIM</h1>
 
 	<h3>Fatih YARDIMCI</h3>
-	Benim adim Fatih ben BURSA'LIYIM ama annem ise KASTAMONU'LU.Benim bir gunum soyle geciyor,PAZARTESI'DEN baslarim CUMA'YA kadar okula giderim ama spor yapmayida unutmam ben CARSAMBA ve CUMARTESI  TAEKWONDO'YA giderim,suan mavi kusagim ama kusak atliycam.PERSEMBE,CUMARTESI,PAZAR gunleri de dershaneye giderim offfff , hic bos gunum yok :D <br/>
+	Bio... Düzenlenicek <br/>
 
 	<a href="https://www.facebook.com/fatihyardimci2005">Facebook Adresim</a><br/>
 	<a href="https://www.instagram.com/_fatihyardimci_/">Instagram Adresim</a><br>
 
 	<h3>Mehmet Davut</h3>
 
-	<p>iste bu benin dayim o bir YAZILIM GELISTIRICISI iste onun sitesinin bir ornegi</p>
+	<p>Yazılım Geliştiricisi Olan Dayımın Sitesinin Bir Örneği</p>
 
 		<iframe frameborder="0" src="https://www.mehmetdavut.com/" width="800px" height="700px"></iframe>
 		<p>
